tests/error/py_errors/python_err.err
Error: Python error (at $FILE:6:14)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     return py(1 / 0)
  |               ^^^^^ Error occurred while evaluating this expression

Traceback printed below:

Traceback (most recent call last):
  File "<string>",
line 1, in <module>
ZeroDivisionError: division by zero

Guppy compilation failed due to 1 previous error
